--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <main class="profile-card">
-    <div class="profile-card__background" alt=""><img class="profile-card__userimage"src="images/image-victor.jpg" alt=""></div>
+    <div class="profile-card__background"><img class="profile-card__userimage"src="images/image-victor.jpg" alt=""></div>
     
     <h1 class="profile-card__username">Victor Crest<span class="profile-card__userage">26</span></h1>
     <p class="profile-card__userlocation">London</p>
